--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -68,8 +68,8 @@
 							Development & CMS
 						%p
 							Once your problem is solved, let's implement it. Bringing an idea to life is all about nailing the details, large or small.
-						%a.arrow{:href=>"ucps.html"}
-							Explore something I built 
+						%a.arrow{:href=>"sites.html"}
+							Explore the things I've built  
 #work
 	= partial "layouts/work_menu"
 = partial "layouts/dribbble"
