--- a/source/layouts/_main_menu.html.haml
+++ b/source/layouts/_main_menu.html.haml
@@ -59,6 +59,15 @@
               mianzi bike co
             %p
               Custom Logotype
+  %a.text-center{:href=>"sites.html"}  
+    %section
+      .container
+        .row
+          .com-md-12
+            %h1.no-margin-bottom
+              Sites I've Build
+            %p
+              Web Design, Development, UX
   %a.text-center{:href=>"chronotrack.html"}  
     %section
       .container
