--- a/source/layouts/_work_menu.hmtl.haml
+++ b/source/layouts/_work_menu.hmtl.haml
@@ -3,6 +3,7 @@
 = partial "menu/wli"
 = partial "menu/outflow"
 = partial "menu/mianzi"
+= partial "menu/sites"
 = partial "menu/chronotrack"
 = partial "menu/ucps"
 = partial "menu/logos"
