--- a/source/layouts/_work_slider.html.haml
+++ b/source/layouts/_work_slider.html.haml
@@ -19,6 +19,7 @@
     %li{"data-slide-to" => "4", "data-target" => "#carousel-example-generic"}
     %li{"data-slide-to" => "5", "data-target" => "#carousel-example-generic"}
     %li{"data-slide-to" => "6", "data-target" => "#carousel-example-generic"}
+    %li{"data-slide-to" => "7", "data-target" => "#carousel-example-generic"}
   / Wrapper for slides
   .carousel-inner
     .item.active
@@ -35,4 +36,6 @@
       = partial "menu/makeena"
     .item
       = partial "menu/wli"
+    .item
+      = partial "menu/sites"
       
