--- a/source/wli.html.haml
+++ b/source/wli.html.haml
@@ -16,7 +16,7 @@
 					About The Client
 				%p
 					Wealth Legacy Institute is a nationally recognized independent wealth management firm in Denver, CO.
-					They offer an integrated, principle-centered, values-based approach to wealth management. WLI is commited to helping clients reach their financial goals.
+					They offer an integrated, principle-centered, values-based approach to wealth management. WLI is committed to helping clients reach their financial goals.
 			.col-md-6.col-sm-6
 				%h4
 					My Role
