--- a/source/layouts/_main_menu.html.haml
+++ b/source/layouts/_main_menu.html.haml
@@ -65,7 +65,7 @@
         .row
           .com-md-12
             %h1.no-margin-bottom
-              Sites I've Build
+              Sites I've Built
             %p
               Web Design, Development, UX
   %a.text-center{:href=>"chronotrack.html"}  
