--- a/source/about.html.haml
+++ b/source/about.html.haml
@@ -18,9 +18,9 @@
 				%h1
 					Me: Alex Lauderdale
 				%h3.double-margin-bottom
-					I live in colorfull Colorado. I've been designing & building the web full time for 
+					I live in colorful Colorado. I've been designing & building the web full time for 
 					%strong
-						4 years.
+						4+ years.
 				%a.btn.btn-xl.btn-default.btn-invert.double-margin-bottom#see{:href=>"makeena.html"}
 					View a Project
 %section
@@ -30,7 +30,7 @@
 			.col-md-8
 				.text-center
 					%h2
-						I Solve Products
+						Better products through design thinking
 					%h3.triple-margin-bottom.no-margin-bottom
 						Your product deserves more than a pretty face. Let's build something with rhyme and reason.  
 			.col-md-2
