--- a/source/layouts/_main_menu.html.haml
+++ b/source/layouts/_main_menu.html.haml
@@ -11,7 +11,7 @@
             •
           %li.text-center
             %a{:href=>"about.html"} 
-              About Me
+              About 
           %li.text-center
             •
           %li.text-center
@@ -50,6 +50,15 @@
               Wealth Legacy Institute
             %p
               Branding, Web Design, Style Guide, UX
+  %a.text-center{:href=>"recruit-u.html"}  
+    %section
+      .container
+        .row
+          .com-md-12
+            %h1.no-margin-bottom
+              Recruit U
+            %p
+              Branding, App Design, UX
   %a.text-center{:href=>"outflow.html"}  
     %section
       .container
@@ -74,7 +83,7 @@
         .row
           .com-md-12
             %h1.no-margin-bottom
-              Sites I've Built
+              Sites 
             %p
               Web Design, Development, UX
   %a.text-center{:href=>"chronotrack.html"}  
