--- a/source/layouts/_work_menu.hmtl.haml
+++ b/source/layouts/_work_menu.hmtl.haml
@@ -1,6 +1,8 @@
 #work
+= partial "menu/wellhire"
 = partial "menu/makeena"
 = partial "menu/wli"
+= partial "menu/recruit_u"
 = partial "menu/outflow"
 = partial "menu/mianzi"
 = partial "menu/sites"
