--- a/source/layouts/_work_slider.html.haml
+++ b/source/layouts/_work_slider.html.haml
@@ -20,6 +20,8 @@
     %li{"data-slide-to" => "5", "data-target" => "#carousel-example-generic"}
     %li{"data-slide-to" => "6", "data-target" => "#carousel-example-generic"}
     %li{"data-slide-to" => "7", "data-target" => "#carousel-example-generic"}
+    %li{"data-slide-to" => "8", "data-target" => "#carousel-example-generic"}
+    %li{"data-slide-to" => "9", "data-target" => "#carousel-example-generic"}
   / Wrapper for slides
   .carousel-inner
     .item.active
@@ -38,4 +40,8 @@
       = partial "menu/wli"
     .item
       = partial "menu/sites"
+    .item
+      = partial "menu/wellhire"
+    .item
+      = partial "menu/recruit_u"
       
