--- a/source/layouts/dribbble.html.haml
+++ b/source/layouts/dribbble.html.haml
@@ -11,7 +11,7 @@
 				%h3
 					Below is some of my recent work from Dribbble.
 					%a{:href=>"http://dribbble.com/Alauderdale10"}
-						View my dribbble portfolio
+						View my Dribbble portfolio
 %section.no-padding-top.no-padding-bottom
 	#dribbble-portfolio
 	%section.inverse-section{:style=>"background-color:#ea4c89;"}
