--- a/source/logos.html.haml
+++ b/source/logos.html.haml
@@ -7,113 +7,118 @@
 						%h1
 							A Solid Foundation
 						%h3
-							Select logos from past clients
+							Select logos from past clients.
 						.divider
-		/ .row
-		/ 	.col-md-12.col-sm-12
-		/ 		%h4
-		/ 			About the logos
-		/ 		%p
-		/ 			Mauris erat orci, gravida at tortor eu, dictum congue quam. Aliquam feugiat quam ac dolor feugiat, non pharetra metus auctor. Pellentesque venenatis Mauris erat orci, gravida at tortor eu, dictum congue quam. Aliquam feugiat quam ac dolor feugiat, non pharetra metus auctor. Pellentesque venenatis Mauris erat orci, gravida at tortor eu, dictum congue quam. Aliquam feugiat quam ac dolor feugiat, non pharetra metus auctor. Pellentesque venenatis Mauris erat orci, gravida at tortor eu, dictum congue quam. Aliquam feugiat quam ac dolor feugiat, non pharetra metus auctor. Pellentesque venenatis. 
 %section
 	.container
 		.row
-			.col-md-4.col-sm-4
-				%h4.text-uppercase
-					Deyrd
-				%p
-					Logo design for a promising wireless headphone company. The logo was developed to be sleek & modern.
-				%img.max-width.double-margin-bottom{:src=>"images/color_deyrd.png"}
-			.col-md-2.col-sm-2
-			.col-md-6.col-sm-6
-				%img.max-width.pull-right{:src=>"images/logo_deyrd.png"}
-%section{:style=>"background-color:#fff4e3;"}
+			.col-md-12
+				.text-center
+					.triple-padding-top
+					.triple-padding-top
+					%img.max-width{:src=>"images/logos/logo_deyrd.png"}
+					.triple-padding-bottom
+					.triple-padding-bottom
+
+
+%section
 	.container
 		.row
-			.col-md-4.col-sm-4
-				%h4.text-uppercase
-					Grade a cafe
-				%p
-					Part of a brand overhaul, the grade a cafe logo was designed to be a playfull expression of a coffee shop located at Colorado State University.
-				%img.max-width.double-margin-bottom{:src=>"images/color_gradea.png"}
-			.col-md-2.col-sm-2
-			.col-md-6.col-sm-6
-				%img.max-width.pull-right{:src=>"images/logo_gradea.png"}
+			.col-md-12
+				.text-center
+					.triple-padding-top
+					.triple-padding-top
+					%img.max-width{:src=>"images/logos/logo_gradea.png"}
+					.triple-padding-bottom
+					.triple-padding-bottom
+
+
 %section.invert-section{:style=>"background-color:#3b3e47;"}
 	.container
 		.row
-			.col-md-4.col-sm-4
-				%h4.text-uppercase
-					Trichome
-				%p
-					Designed for a local band. The Trichome logo radiates high energy dance vibrations. 
-				%img.max-width.double-margin-bottom{:src=>"images/color_trichome.png"}
-			.col-md-2.col-sm-2
-			.col-md-6.col-sm-6
-				%img.max-width.pull-right{:src=>"images/logo_trichome.png"}
+			.col-md-12
+				.text-center
+					.triple-padding-top
+					.triple-padding-top
+					%img.max-width{:src=>"images/logos/logo_trichome.png"}
+					.triple-padding-bottom
+					.triple-padding-bottom
 %section
 	.container
 		.row
-			.col-md-4.col-sm-4
-				%h4.text-uppercase
-					Makeena
-				%p
-					The makeena logo is an illustration of the companies promise to connect brands and shoppers.
-					%a{:href=>"makeena.html"}
-						See more work form makeena
-				%img.max-width.double-margin-bottom{:src=>"images/color_makeena.png"}
-			.col-md-2.col-sm-2
-			.col-md-6.col-sm-6
-				%img.max-width.pull-right{:src=>"images/logo_makeena.png"}
-%section{:style=>"background-color:#f2f2f2;"}
-	.container
-		.row
-			.col-md-4.col-sm-4
-				%h4.text-uppercase
-					HOMELESSNESS PREVENTION INITIATIVE
-				%p
-					Focused on Security & protection, the HPI logo was developed to encompass all the passion of this non-profit orginization.
-				%img.max-width.double-margin-bottom{:src=>"images/color_hpi.png"}
-			.col-md-2.col-sm-2
-			.col-md-6.col-sm-6
-				%img.max-width.pull-right{:src=>"images/logo_hpi.png"}
+			.col-md-12
+				.text-center
+					.triple-padding-top
+					.triple-padding-top
+					%img.max-width{:src=>"images/logos/logo_makeena.png"}
+					.triple-padding-bottom
+					.triple-padding-bottom
 %section
 	.container
 		.row
-			.col-md-4.col-sm-4
-				%h4.text-uppercase
-					JODI HYNDS PHOTOGRAPHY
-				%p
-					Designed to be approachable and inviting. This mark was developed to reflect the signature of this local photographer.
-				%img.max-width.double-margin-bottom{:src=>"images/color_jodu.png"}
-			.col-md-2.col-sm-2
-			.col-md-6.col-sm-6
-				%img.max-width.pull-right{:src=>"images/logo_jodihynds.png"}
+			.col-md-12
+				.text-center
+					.triple-padding-top
+					.triple-padding-top
+					%img.max-width{:src=>"images/logos/logo_hpi.png"}
+					.triple-padding-bottom
+					.triple-padding-bottom
+%section
+	.container
+		.row
+			.col-md-12
+				.text-center
+					.triple-padding-top
+					.triple-padding-top
+					%img.max-width{:src=>"images/logos/logo_jodihynds.png"}
+					.triple-padding-bottom
+					.triple-padding-bottom
+
+
 %section.invert-section{:style=>"background-color:#2c383e;"}
 	.container
 		.row
-			.col-md-4.col-sm-4
-				%h4.text-uppercase
-					Mianzi
-				%p
-					A logo designed to illustrate the mission of this humanistic bike company. 
-					%a{:href=>"mianzi.html"}
-						See more work form mianzi
-				%img.max-width.double-margin-bottom{:src=>"images/color_mianzi.png"}
-			.col-md-2.col-sm-2
-			.col-md-6.col-sm-6
-				%img.max-width.pull-right{:src=>"images/logo_mianzi.png"}
+			.col-md-12
+				.text-center
+					.triple-padding-top
+					.triple-padding-top
+					%img.max-width{:src=>"images/logos/logo_mianzi.png"}
+					.triple-padding-bottom
+					.triple-padding-bottom
+
+
 %section
 	.container
 		.row
-			.col-md-4.col-sm-4
-				%h4.text-uppercase
-					NORTHERN COLORADO ALLERGY & ASTHMA CLINIC
-				%p
-					Developed to convey a whimsical feeling of relief associated with the care provided by this medical association. 
-				%img.max-width.double-margin-bottom{:src=>"images/color_ncaac.png"}
-			.col-md-2.col-sm-2
-			.col-md-6.col-sm-6
-				%img.max-width.pull-right{:src=>"images/logo_ncaac.png"}
+			.col-md-12
+				.text-center
+					.triple-padding-top
+					.triple-padding-top
+					%img.max-width{:src=>"images/logos/logo_ncaac.png"}
+					.triple-padding-bottom
+					.triple-padding-bottom
+
+%section{:style=>"background:#782f8d;"}
+	.container
+		.row
+			.col-md-12
+				.text-center
+					.triple-padding-top
+					.triple-padding-top
+					%img.max-width{:src=>"images/logos/logo_recruit_u.png"}
+					.triple-padding-bottom
+					.triple-padding-bottom
+
+
+%section
+	.container
+		.row
+			.col-md-12
+				.text-center
+					.triple-padding-top
+					.triple-padding-top
+					%img.max-width{:src=>"images/logos/logo_impact.png"}
+					.triple-padding-bottom
+					.triple-padding-bottom
 
 = partial "layouts/work_slider"
