--- a/source/menu/_chronotrack.html.haml
+++ b/source/menu/_chronotrack.html.haml
@@ -5,7 +5,7 @@
 			.col-md-8
 				.text-center.white-text
 					%h1.double-margin-bottom
-						Chronotrack Live
+						Chronotrack
 					%img.text-center.triple-margin-bottom{src:"images/chronotrack_tag_sm.png"}
 					.clearfix
 					%a.btn.btn-lg.btn-default.btn-invert.double-margin-bottom{:href=>"chronotrack.html"}
