--- a/source/menu/_sites.html.haml
+++ b/source/menu/_sites.html.haml
@@ -5,7 +5,7 @@
 			.col-md-8
 				.text-center
 					%h1.double-margin-bottom
-						Sites I've Built
+						Sites 
 					%a.btn.btn-lg.btn-default.btn-invert.double-margin-bottom{:href=>"sites.html"}
 						View The Case Study
 			.col-md-2
