--- a/source/wellhire.html.haml
+++ b/source/wellhire.html.haml
@@ -1,73 +1,109 @@
-%section.invert-section{:style=>"background-color:#008ac0;"}
-	.container
-		.row.triple-margin-bottom
-			.col-md-12
-				.margin-bottom
-					.text-center
-						%h1
-							Hiring made easy
-						%h3
-							Giving a new look to a great product.
-						.row
-							.col-lg-2
-							.col-lg-8
-								%img.max-width.no-margin-bottom.margin-top{:src=>"images/wellhire/wellhire_screen.png"}
-							.col-lg-2
-						.divider
-		.row
-			.col-md-6.col-sm-6
-				%h4
-					About the project
-				%p
-					I was hired by Union Colony Preparatory School to completely re-imagine their website. Their existing site had been outdated for some time, and they were seeking a fresh perspective on their web presence.  
-			.col-md-6.col-sm-6
-				%h4
-					My Role
-				%p
-					I worked with UCPS to build a systematic web design approach aimed to best serve the students and parents. I delivered a fresh website with an emphasis on content and school info. 
+%section.invert-section{style: "background-color:#008ac0;"}
+  .container
+    .row.triple-margin-bottom
+      .col-md-12
+        .margin-bottom
+          .text-center
+            %h1
+              Hiring made easy
+            %h3
+              Giving a new look to a great product.
+            .row
+              .col-lg-2
+              .col-lg-8
+                %img.max-width.no-margin-bottom.margin-top{src: "images/wellhire/wellhire_screen.png"}
+                .col-lg-2
+              .clearfix
+              .divider
+    .row
+      .col-md-6.col-sm-6
+        %h4
+          About the project
+        %p
+          Wellhire is a innovative piece of software with simple offerings. The company makes hiring a breeze through online assessments. I was hired by wellhire to design a new look and feel for the product.
+      .col-md-6.col-sm-6
+        %h4
+          My Role
+        %p
+          I worked with wellhire to completly re-design and re-build their product. We aimed to preserve popular functionality and highlight new features through a shiny new interface system.
 %section
-	.container
-		.row
-			.col-md-2
-			.col-md-8
-				.text-center
-					%h2
-						Light & Playful
-					%h3
-						The school recently opened  a new location to support more students. We designed  the site to allow easy access to both schools, with simple sidebar navigation to support links to individual schools. Each school had their own presence, encompassed by unity with the school's mission.
-			.col-md-2
-		.row
-			.col-md-1
-			.col-md-10
-				.text-center
-					%img.max-width.triple-margin-bottom.triple-margin-top{:src=>"images/wellhire/illustrations.png"}
-			.col-md-1
-%section.invert-section.no-padding-bottom{:style=>"background:#00668e;"}
-	.container
-		.row
-			.col-md-1
-			.col-md-10
-				.text-center
-					%h2
-						Website Design
-					%a.btn.btn-xl.btn-default.btn-invert{:href=>"http://www.wellhire.com/"}
-						View the Site
-			.col-md-1
-		.row
-			.col-md-1
-			.col-md-10
-				%img.full-width{:src=>"images/wellhire/site.png"}
-			.col-md-1
-%section{:style=>"background-color:#f2f2f2;"}
-	.container
-		.row
-			.col-lg-12
-				=image_tag "/wellhire/responsive.png"
+  .container
+    .row
+      .col-md-2
+      .col-md-8
+        .text-center
+          %h2
+            Light  Playful
+          %h3
+            We worked to bring the Wellhire brand to life through a set of approachable illustrations.
+      .col-md-2
+    .row
+      .col-md-1
+      .col-md-10
+        .text-center
+          %img.max-width.double-margin-bottom.triple-margin-top{src: "images/wellhire/illustrations.png"}
+          %img.max-width.triple-margin-bottom.triple-margin-top{src: "images/wellhire/pallete.png"}
+        .col-md-1
+%section.invert-section.no-padding-bottom{style: "background:#00668e;"}
+  .container
+    .row
+      .col-md-1
+      .col-md-10
+        .text-center
+          %h2
+            Website Design
+          %a.btn.btn-xl.btn-default.btn-invert{href: "http://www.wellhire.com/"}
+            View the Site
+      .col-md-1
+    .row
+      .col-md-1
+      .col-md-10
+        %img.full-width{src: "images/wellhire/site.png"}
+        .col-md-1
+%section
+  .container
+    .row.margin-bottom
+      .col-lg-2
+      .col-lg-8
+        .text-center
+          %h2
+            UI Design
+    .row
+      .col-sm-6
+        %img.margin-bottom.img-responsive.img-shadow{src: "images/wellhire/dashboard.png"}
+      .col-sm-6
+        %img.margin-bottom.img-responsive.img-shadow{src: "images/wellhire/can.png"}
+    .row
+      .col-sm-6
+        %img.margin-bottom.img-responsive.img-shadow{src: "images/wellhire/modal.png"}
+      .col-sm-6
+        %img.margin-bottom.img-responsive.img-shadow{src: "images/wellhire/profile.png"}
+    .row
+      .col-sm-6
+        %img.margin-bottom.img-responsive.img-shadow{src: "images/wellhire/results.png"}
+      .col-sm-6
+        %img.margin-bottom.img-responsive.img-shadow{src: "images/wellhire/account.png"}
+%section{style: "background-color:#f2f2f2;"}
+  .container
+    .row
+      .col-lg-2
+      .col-lg-8
+        .text-center
+          .double-margin-bottom
+            %img.margin-auto.img-responsive{src:"images/wellhire/responsive.png"}
+          %h2
+            Responsive
+          %p
+            We built the new Wellhire site to be responsive down to mobile with an emphasis on tablet. Wellhire users can now enjoy the product wherever they may be.
+          .double-margin-top
+            %img.margin-auto.img-responsive{src: "images/wellhire/devices.png"}
 
+      .col-lg-2
+%section{style: "background-image:url('images/wellhire/imgs.png'); height:200px; opacity:.5;"}
 %section
-	.container
-		.row
-			.col-lg-12
-				%blockquote.text-center{style:"color:#008ac0;"}
-					"We love it!"
+  .container
+    .row
+      .col-lg-12
+        %blockquote.text-center{style: "color:#008ac0;"}
+          "Love the look and feel.  Really awesome."
 = partial "layouts/work_slider"
