--- a/source/sites.html.haml
+++ b/source/sites.html.haml
@@ -19,7 +19,7 @@
 				%h4
 					About the Sites
 				%p
-					I built all of the sites below including the one you are viewing right this second with love & care. The sites were developed using some combination of our good friends HTML5, CSS3, Wordpress, Ruby on Rails, and Middleman. Many of them are complete with a custom backend, designed specifically for the client's needs. Allowing for easy management of content with no coding skills required. If you like, I can build one for you to.
+					I built all of the sites below with love & care. The sites were developed using a combination of HTML5, CSS3, Wordpress, Ruby on Rails, and Middleman. Many of them are complete with a custom backend, designed specifically for the client's needs. Allowing for easy management of content. If you like, I can build one for you to.
 
 %section.invert-section.no-padding-bottom{:style=>"background:#f26223;"}
 	.container
@@ -46,6 +46,9 @@
 					Wellhire offers tools for people looking to hire the perfect candidate. We worked to completely re-imagine their public marketing site and backend UI.
 				%a.btn.btn-invert.btn-xl.margin-bottom.btn-block{:href=>"http://wellhire.com/"}
 					View The Site
+				%a.btn.btn-invert.btn-xl.margin-bottom.btn-block{:href=>"wellhire.html"}
+					View The Case Study
+
 			.col-md-7
 				%img.full-width{:src=>"images/sites/wellhire.png"}
 
@@ -57,9 +60,11 @@
 				%h2
 					Wealth Legacy Institute
 				%p
-					Wealth Legacy Institute is a nationally recognized independent wealth management firm in Denver, CO. They offer an integrated, principle-centered, values-based approach to wealth management. WLI is committed to helping clients reach their financial goals.
+					Wealth Legacy Institute is a nationally recognized independent wealth management firm in Denver, CO. They offer an integrated, principle-centered, values-based approach to wealth management.
 				%a.btn.btn-invert.btn-xl.margin-bottom.btn-block{:href=>"http://wealthlegacyinstitute.com/"}
 					View The Site
+				%a.btn.btn-invert.btn-xl.margin-bottom.btn-block{:href=>"wli.html"}
+					View The Case Study
 			.col-md-7
 				%img.full-width{:src=>"images/sites/wli.png"}
 
@@ -88,6 +93,8 @@
 					I worked with UCPS to build a systematic web design approach aimed to best serve the students and parents. I delivered a fresh website with an emphasis on content and school info.
 				%a.btn.btn-invert.btn-xl.margin-bottom.btn-block{:href=>"http://unioncolonyschools.org/"}
 					View The Site
+				%a.btn.btn-invert.btn-xl.margin-bottom.btn-block{:href=>"ucps.html"}
+					View The Case Study
 			.col-md-7
 				%img.full-width{:src=>"images/sites/ucps.png"}
 
@@ -102,6 +109,8 @@
 					Outflow hired me to help define their voice and develop their website. They required a simple website design that allowed them to voice their mission and collect donations from people passionate about the cause.
 				%a.btn.btn-invert.btn-xl.margin-bottom.btn-block{:href=>"http://outflow.org/"}
 					View The Site
+				%a.btn.btn-invert.btn-xl.margin-bottom.btn-block{:href=>"outflow.html"}
+					View The Case Study
 			.col-md-7
 				%img.full-width{:src=>"images/sites/outflow.png"}
 
