--- a/source/sites.html.haml
+++ b/source/sites.html.haml
@@ -81,7 +81,18 @@
 			.col-md-7
 				%img.full-width{:src=>"images/sites/90.png"}
 
-
+%section.invert-section.no-padding-bottom{:style=>"background:#f1af29;"}
+	.container
+		.row
+			.col-md-5
+				%h2
+					PMP Training
+				%p
+					PMTraining offers online PMP training courses. We designed the site to emphasize the sites core offerings in a clean and simple way, with clear calls to action.
+				%a.btn.btn-invert.btn-xl.margin-bottom.btn-block{:href=>"http://pmtraining.com/"}
+					View The Site
+			.col-md-7
+				%img.full-width{:src=>"images/sites/pm_training.png"}
 %section.invert-section.no-padding-bottom{:style=>"background:#256db2;"}
 	.container
 		.row
