--- a/source/layouts/_work_slider.html.haml
+++ b/source/layouts/_work_slider.html.haml
@@ -9,39 +9,40 @@
           %h3
             I've prepared a few more for your viewing pleasure.
       .col-lg-2
-#carousel-example-generic.carousel.slide{"data-ride" => "carousel"}
-  / Indicators
-  %ol.carousel-indicators
-    %li.active{"data-slide-to" => "0", "data-target" => "#carousel-example-generic"}
-    %li{"data-slide-to" => "1", "data-target" => "#carousel-example-generic"}
-    %li{"data-slide-to" => "2", "data-target" => "#carousel-example-generic"}
-    %li{"data-slide-to" => "3", "data-target" => "#carousel-example-generic"}
-    %li{"data-slide-to" => "4", "data-target" => "#carousel-example-generic"}
-    %li{"data-slide-to" => "5", "data-target" => "#carousel-example-generic"}
-    %li{"data-slide-to" => "6", "data-target" => "#carousel-example-generic"}
-    %li{"data-slide-to" => "7", "data-target" => "#carousel-example-generic"}
-    %li{"data-slide-to" => "8", "data-target" => "#carousel-example-generic"}
-    %li{"data-slide-to" => "9", "data-target" => "#carousel-example-generic"}
-  / Wrapper for slides
-  .carousel-inner
-    .item.active
-      = partial "menu/logos"
-    .item
-      = partial "menu/outflow"
-    .item
-      = partial "menu/ucps"
-    .item
-      = partial "menu/mianzi"
-    .item
-      = partial "menu/chronotrack"
-    .item
-      = partial "menu/makeena"
-    .item
-      = partial "menu/wli"
-    .item
-      = partial "menu/sites"
-    .item
-      = partial "menu/wellhire"
-    .item
-      = partial "menu/recruit_u"
+#work-slider
+  #carousel-example-generic.carousel.slide{"data-ride" => "carousel"}
+    / Indicators
+    %ol.carousel-indicators
+      %li.active{"data-slide-to" => "0", "data-target" => "#carousel-example-generic"}
+      %li{"data-slide-to" => "1", "data-target" => "#carousel-example-generic"}
+      %li{"data-slide-to" => "2", "data-target" => "#carousel-example-generic"}
+      %li{"data-slide-to" => "3", "data-target" => "#carousel-example-generic"}
+      %li{"data-slide-to" => "4", "data-target" => "#carousel-example-generic"}
+      %li{"data-slide-to" => "5", "data-target" => "#carousel-example-generic"}
+      %li{"data-slide-to" => "6", "data-target" => "#carousel-example-generic"}
+      %li{"data-slide-to" => "7", "data-target" => "#carousel-example-generic"}
+      %li{"data-slide-to" => "8", "data-target" => "#carousel-example-generic"}
+      %li{"data-slide-to" => "9", "data-target" => "#carousel-example-generic"}
+    / Wrapper for slides
+    .carousel-inner
+      .item.active
+        = partial "menu/logos"
+      .item
+        = partial "menu/outflow"
+      .item
+        = partial "menu/ucps"
+      .item
+        = partial "menu/mianzi"
+      .item
+        = partial "menu/chronotrack"
+      .item
+        = partial "menu/makeena"
+      .item
+        = partial "menu/wli"
+      .item
+        = partial "menu/sites"
+      .item
+        = partial "menu/wellhire"
+      .item
+        = partial "menu/recruit_u"
       
